--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     
     <main class="max-w-screen-xl mx-auto mb-24 mt-[330px]">
 
+        <!-- history -->
+
 
         <div id="history-container" class="history text-center hidden">
             <h3 class="text-2xl font-bold">Here is the donation history</h3>
